fix: dark mode tag select elements

--- a/system/templates/base/src/scss/app.scss
+++ b/system/templates/base/src/scss/app.scss
@@ -80,6 +80,11 @@ $bootstrap-icons-font-dir: "/system/templates/base/node_modules/bootstrap-icons/
 	.ts-control input {
 		color: var(--bs-body-color);
 	}
+
+	.ts-wrapper.multi .ts-control .item {
+		background-color: var(--bs-tertiary-bg);
+		color: $white;
+	}
 }
 
 // Quill editor dark theme
